[ICU-8854] Inefficient use of number constructors. Use valueOf instead. X-Commit-URL: https://ssl.icu-project.org/trac/changeset/30836 Former-commit-id: eab855bb57d7095d8c57671d941f77c79eef8de4